--- a/redwoodblog/web/package.json
+++ b/redwoodblog/web/package.json
@@ -13,6 +13,7 @@
     ]
   },
   "dependencies": {
+    "@redwoodjs/auth": "1.5.0",
     "@redwoodjs/forms": "1.5.0",
     "@redwoodjs/router": "1.5.0",
     "@redwoodjs/web": "1.5.0",
